src/test/ui/pattern/usefulness/slice-patterns-exhaustiveness.stderr
error[E0004]: non-exhaustive patterns: `&[false, _]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:10:11
   |
LL |     match s2 {
   |           ^^ pattern `&[false, _]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:14:11
   |
LL |     match s3 {
   |           ^^ pattern `&[false, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:18:11
   |
LL |     match s10 {
   |           ^^^ pattern `&[false, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, true]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:27:11
   |
LL |     match s2 {
   |           ^^ pattern `&[false, true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, .., true]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:32:11
   |
LL |     match s3 {
   |           ^^ pattern `&[false, .., true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, .., true]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:37:11
   |
LL |     match s {
   |           ^ pattern `&[false, .., true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[_, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:44:11
   |
LL |     match s {
   |           ^ pattern `&[_, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[_, _, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:48:11
   |
LL |     match s {
   |           ^ pattern `&[_, _, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:53:11
   |
LL |     match s {
   |           ^ pattern `&[false, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, _, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:58:11
   |
LL |     match s {
   |           ^ pattern `&[false, _, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[_, .., false]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:64:11
   |
LL |     match s {
   |           ^ pattern `&[_, .., false]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[_, _, .., true]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:71:11
   |
LL |     match s {
   |           ^ pattern `&[_, _, .., true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[true, _, .., _]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:78:11
   |
LL |     match s {
   |           ^ pattern `&[true, _, .., _]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:87:11
   |
LL |     match s {
   |           ^ pattern `&[..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[true]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:91:11
   |
LL |     match s {
   |           ^ pattern `&[true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:99:11
   |
LL |     match s1 {
   |           ^^ pattern `&[false]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0004`.
